--- a/CrackingCode/.project
+++ b/CrackingCode/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>CodeInterview</name>
+	<name>CrackingCode</name>
 	<comment></comment>
 	<projects>
 	</projects>
